--- a/index.ipynb
+++ b/index.ipynb
@@ -9,10 +9,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.5 ('learn-env')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.5"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "eb5053c72f5407e517467dfa6180270431126d28d8facf2e98fc4fe2a4e10b73"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
