--- a/index.ipynb
+++ b/index.ipynb
@@ -74121,6 +74121,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this model we will compare renovations using  price as a normalized value\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 520,
    "metadata": {},
