--- a/index.ipynb
+++ b/index.ipynb
@@ -74270,7 +74270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Summary "
+    "#### Model Summary "
    ]
   },
   {
