--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "The King county real estate agency helps homeowners buy and/or sell homes.\n",
     "<br>\n",
-    " A stakeholder is would like to advice homeowners on how to increase the value of their homes.\n",
+    " A stakeholder would like to know how to increase the value of their homes using particular features.\n",
     " <br>\n",
     "The business question is how renovations might increase the value of their homes and by what amount? "
    ]
